fixed cards wrap

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -1,7 +1,5 @@
-@import "../units/_variables.scss";
-
 .card {
-  max-width: 200px;
+  max-width: $cardWidth;
   padding: 0 16px;
   border: 1px solid #f3f3f3;
   border-radius: 5px;
@@ -106,29 +104,8 @@
     }
   }
 
-  &--margin {
-    margin-bottom: 46px;
-    margin-right: 48px;
-  }
-}
-
-.stars {
-  display: flex;
-
-  &__star {
-    padding: 8px;
-    margin-right: 4px;
-
-    background-image: url(../../images/star.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
-  & :last-child {
-    margin-right: 0;
-  }
-
-  &--4 :nth-child(-n + 4) {
-    background-image: url(../../images/star-active.svg);
+  &--mrgn {
+    margin-right: $cardMrgnRight;
+    margin-bottom: $cardMrgnBottom;
   }
 }
