--- a/src/styles/blocks/main-block.scss
+++ b/src/styles/blocks/main-block.scss
@@ -1,24 +1,16 @@
 .main {
-  display: flex;
-  justify-content: center;
+  display: block;
+  padding: 50px 0 26px;
 
-  padding: 50px 0 72px;
   &__wrapper {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
-    padding: 0 40px;
 
-    & :nth-last-child(-n + 4) {
-      margin-bottom: 0;
-    }
+    margin: 0 auto;
+    width: 4 * $cardWidth + 3 * $cardMrgnRight;
 
     & :nth-child(4n) {
       margin-right: 0;
-    }
-
-    @media (min-width: 1200px) {
-      padding: 0 128px;
     }
   }
 }
