--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,5 +1,3 @@
-@import "../units/variables";
-
 .nav {
 
   &__list {
@@ -18,15 +16,20 @@
   &__link {
     display: flex;
     align-items: center;
-    text-decoration: none;
-    color: $darkBlue;
-    list-style: none;
+
     position: relative;
+    box-sizing: border-box;
+
     padding: 23px 0;
-    line-height: 14px;
-    font-size: 12px;
+
+    text-decoration: none;
+    list-style: none;
+    line-height: $lineHeightSmall;
     font-weight: $fontWeightMedium;
+    font-size: 12px;
     text-transform: uppercase;
+
+    color: $darkBlue;
 
     &:hover {
       color: $cyan;
